#ifndef BATTLESHIP_INCLUDE_BATTLESHIP_ACTIONTYPE_H_
#define BATTLESHIP_INCLUDE_BATTLESHIP_ACTIONTYPE_H_

enum ActionType{
  MOVE_AND_SEARCH, MOVE_AND_COVER, SHOOT
};
#endif//BATTLESHIP_INCLUDE_BATTLESHIP_ACTIONTYPE_H_
