#ifndef BATTLESHIP_INCLUDE_BATTLESHIP_OCCUPATIONTYPE_H_
#define BATTLESHIP_INCLUDE_BATTLESHIP_OCCUPATIONTYPE_H_

enum OccupationType{
  EMPTY = 0,
  HIT,
  MISS,
  SUBMARINE,
  BATTLESHIP,
  SUPPORT_BATTLESHIP
};

#endif//BATTLESHIP_INCLUDE_BATTLESHIP_OCCUPATIONTYPE_H_
