#ifndef BATTLESHIP_INCLUDE_BATTLESHIP_ORIENTATION_H_
#define BATTLESHIP_INCLUDE_BATTLESHIP_ORIENTATION_H_

enum Orientation{
    HORIZONTAL, VERTICAL, UNSET
};

#endif//BATTLESHIP_INCLUDE_BATTLESHIP_ORIENTATION_H_
